# testio_automation

./: .dockerignore  .gitignore  Dockerfile  clear_db.py  config.yaml  docker-compose.yml  pyproject.toml  simulate_cirro_email.py  simulate_imap_append.py  test_aioimaplib_fetch.py  test_idle.py  test_idle_start.py  test_imap_fetch.py  test_imap_sync.py  test_mark_unread.py
data/browser_profile/: Local State
data/browser_profile/Default/: DIPS  Favicons  History  Login Data  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data
data/browser_profile/Default/DawnGraphiteCache/: data_1  index
data/browser_profile/Default/DawnWebGPUCache/: data_1  index
data/browser_profile/Default/Extension Rules/: LOG  LOG.old
data/browser_profile/Default/Extension Scripts/: LOG  LOG.old
data/browser_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  index
data/browser_profile/ShaderCache/: data_1  index
data/browser_profile/segmentation_platform/: ukm_db
src/: __init__.py  config.py  main.py
src/bot/: acceptor.py  auth.py  engine.py  monitor.py  state.py
src/dashboard/: __init__.py  app.py
src/dashboard/templates/: index.html
src/database/: stats.py
src/email/: listener.py
src/fallback/: __init__.py
src/intercept/: __init__.py  capture.py  replay.py
src/notifications/: prefs.py  telegram.py
src/screenshots/: __init__.py  manager.py
src/stealth/: __init__.py  fingerprint.py  human.py  patches.py
src/telegram_bot/: __init__.py
(+155 files in other folders)
