[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testio-automation"
version = "0.1.0"
description = "Test IO Auto-Accept Automation — instantly accepts test invitations"
requires-python = ">=3.10"

dependencies = [
    # Browser automation
    "playwright>=1.40",
    "playwright-stealth>=1.0",

    # HTTP client (for API intercept replay)
    "httpx>=0.27",

    # Web dashboard
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.2",

    # Telegram bot
    "python-telegram-bot>=21.0",
    "aioimaplib>=1.0.1",

    # Config & environment
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # Database (stats tracking)
    "aiosqlite>=0.20",

    # Image processing (screenshots)
    "Pillow>=10.0",

    # Utilities
    "rich>=13.0",
]

[project.scripts]
testio = "src.main:main"
